fixed winter registration bar glitch on iphone and carousel transition speed

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -2,7 +2,9 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Open Sans', sans-serif;
+  overflow-x:hidden;
   display: none;
   text-rendering: optimizelegibility;
 
@@ -299,6 +301,9 @@ body {
 }
 
 #winter-registraion-bar {
+  min-width: 1200px;
+  margin:0;
+  padding:0;
   background: rgb(0,0,0);
   padding: 3px 0 20px 0;
 
@@ -414,6 +419,13 @@ body {
     width:1010px;
     position: relative;
     right: 40px;
+
+    .carousel-inner > .item {
+      -webkit-transition: 1s ease-in-out left;
+      -moz-transition: 1s ease-in-out left;
+      -o-transition: 1s ease-in-out left;
+      transition: 1s ease-in-out left;
+    }
   }
 
   .facility_green_box {
